--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_C_COMPILER "clang")
 set(CMAKE_CXX_COMPILER "clang")
 
 add_executable(cliontest main.c)
-add_executable(run_valgrind run_valgrind.c)
-add_dependencies(run_valgrind cliontest)
+add_executable(valgrind_cliontest run_valgrind.c)
+add_dependencies(valgrind_cliontest cliontest)
